missed + add 2 files to hgignore

--- a/.hgignore
+++ b/.hgignore
@@ -3,3 +3,5 @@ glob:visualstudio/lib/wt.lib
 glob:visualstudio/lib/wthttp.lib
 glob:visualstudio/panel.wt.sdf
 glob:visualstudio/panel.wt.suo
+glob:codeblocks/HGPlayersPanel.depend
+glob:codeblocks/HGPlayersPanel.layout
