Rewrite Error Page. It's not final version (actually there are no output Oo <- must be fixed) but i don't have crashes :P

--- a/codeblocks/HGPlayersPanel.cbp
+++ b/codeblocks/HGPlayersPanel.cbp
@@ -67,6 +67,8 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-DUNIX" />
+			<Add option="-DLINUX" />
 			<Add directory="../../hgpanel" />
 		</Compiler>
 		<Unit filename="../LICENCE" />
