--- a/defines.h.dist
+++ b/defines.h.dist
@@ -68,6 +68,11 @@ typedef uint32_t uint32;
 
 #define PANEL_DB_DATA   PANEL_SQL_HOST, PANEL_SQL_LOGIN, PANEL_SQL_PASS, PANEL_SQL_PORT
 
+#define PASSWORD_ANSI_START 33
+#define PASSWORD_ANSI_END   126
+#define PASSWORD_LENGTH_MIN 8
+#define PASSWORD_LENGTH_MAX 12
+
 #ifdef WIN32
 #define SSCANF      sscanf_s
 #define VSNPRINTF   vsnprintf_s
