add jwSMTP lib for mail send support implementation

--- a/config.h.dist
+++ b/config.h.dist
@@ -55,6 +55,10 @@
 
 #define MAIL_FROM   "kontakt@gamefreedom.pl"
 
+#define MAIL_HOST  "localhost"
+#define MAIL_USER  "root"
+#define MAIL_PASS  "root"
+
 #define REGISTRATION_ENABLED
 
 #endif // CONFIG_H_INCLUDED
