--- a/visualstudio/panel.wt/panel.wt/panel.wt.vcxproj
+++ b/visualstudio/panel.wt/panel.wt/panel.wt.vcxproj
@@ -65,8 +65,12 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>../../lib;</AdditionalLibraryDirectories>
-      <AdditionalDependencies>wt.lib;wthttp.lib;libmysql.lib;wsock32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>wt.lib;wthttp.lib;libmysql.lib;wsock32.lib;jwsmtp.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalOptions> /LIBPATH:"C:\Program Files (x86)\boost\boost_1_46_1\lib" %(AdditionalOptions)</AdditionalOptions>
+      <IgnoreAllDefaultLibraries>
+      </IgnoreAllDefaultLibraries>
+      <IgnoreSpecificDefaultLibraries>
+      </IgnoreSpecificDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
