--- a/config.h.dist
+++ b/config.h.dist
@@ -19,46 +19,42 @@
 #ifndef CONFIG_H_INCLUDED
 #define CONFIG_H_INCLUDED
 
-#define SHOW_DATABASE_ERRORS
+#define SHOW_DATABASE_ERRORS    /**< Comment if you don't want to show database errors on error page */
 
-//#define DEBUG
+//#define DEBUG /**< Uncomment to show some debug informations */
 
-#define SITE_TITLE  "HellGround Player's Panel"
+#define SITE_TITLE  "HellGround Player's Panel" /**< Players panel site title (should be replaced with text from DB) */
 
 #define SITE_NAME   "HellGround"
 
-#define SQL_HOST        "serverhost"
-#define SQL_LOGIN       "serverlogin"
-#define SQL_PASSWORD    "serverpassword"
+#define SQL_HOST        "serverhost"        /**< server database host */
+#define SQL_LOGIN       "serverlogin"       /**< server database login */
+#define SQL_PASSWORD    "serverpassword"    /**< server database password */
 // default mysql port is 3306
-#define SQL_PORT        3306
+#define SQL_PORT        3306                /**< mysql server port for server */
 
-#define SERVER_DB_DATA  SQL_HOST, SQL_LOGIN, SQL_PASSWORD, SQL_PORT
-
-#define PANEL_SQL_HOST  "panelhost"
-#define PANEL_SQL_LOGIN "panellogin"
-#define PANEL_SQL_PASS  "panelpassword"
+#define PANEL_SQL_HOST  "panelhost"         /**< panel database host */
+#define PANEL_SQL_LOGIN "panellogin"        /**< panel database login */
+#define PANEL_SQL_PASS  "panelpassword"     /**< panel database password */
 // default mysql port is 3306
-#define PANEL_SQL_PORT  3306
+#define PANEL_SQL_PORT  3306                /**< mysql server port for panel */
 
-#define SQL_REALMDB     "realmdb"
-#define SQL_CHARDB      "charactersdb"
-#define SQL_WORLDDB     "worlddb"
-#define SQL_PANELDB     "paneldb"
+#define SQL_REALMDB     "realmdb"           /**< realm database name */
+#define SQL_CHARDB      "charactersdb"      /**< characters database name */
+#define SQL_WORLDDB     "worlddb"           /**< world database name */
+#define SQL_PANELDB     "paneldb"           /**< panel database name */
 
-#define PANEL_DB_DATA   PANEL_SQL_HOST, PANEL_SQL_LOGIN, PANEL_SQL_PASS, PANEL_SQL_PORT
+#define PASSWORD_ANSI_START 33              /**< ANSI id for first character which can be used to password generation */
+#define PASSWORD_ANSI_END   126             /**< ANSI id for last character which can be used to password generation */
+#define PASSWORD_LENGTH_MIN 8               /**< Minimum password length to generate */
+#define PASSWORD_LENGTH_MAX 12              /**< Maximum password length to generate */
 
-#define PASSWORD_ANSI_START 33
-#define PASSWORD_ANSI_END   126
-#define PASSWORD_LENGTH_MIN 8
-#define PASSWORD_LENGTH_MAX 12
+#define MAIL_FROM   "kontakt@gamefreedom.pl"    /**< email addres for "from" */
 
-#define MAIL_FROM   "kontakt@gamefreedom.pl"
+#define MAIL_HOST  "localhost"  /**< host for emails */
+#define MAIL_USER  "root"       /**< login to email host */
+#define MAIL_PASS  "root"       /**< pass to email host */
 
-#define MAIL_HOST  "localhost"
-#define MAIL_USER  "root"
-#define MAIL_PASS  "root"
-
-#define REGISTRATION_ENABLED
+#define REGISTRATION_ENABLED    /**< comment this to disable registration */
 
 #endif // CONFIG_H_INCLUDED
