--- a/src/config.h.dist
+++ b/src/config.h.dist
@@ -66,6 +66,10 @@
 
 #define REGISTRATION_ENABLED    /**< comment this to disable registration */
 
+#define SHOW_EMAIL_CHARACTERS_COUNT 2   /**< how many email address characters should be visible in information page (0 - show all) */
+#define EMAIL_HIDE_CHAR             '*' /**< character which should be displayed in hidden place */
+#define EMAIL_HIDE_CHAR_COUNT       4   /**< how many EMAIL_HIDE_CHAR characters should be displayed (0 - same count as hidden email characters) */
+
 #endif // CONFIG_H_INCLUDED
 
 /**< \} */
