--- a/src/config.h.dist
+++ b/src/config.h.dist
@@ -55,8 +55,9 @@
 
 #define PASSWORD_ASCII_START    33          /**< ASCII id for first character which can be used to password generation */
 #define PASSWORD_ASCII_END      126         /**< ASCII id for last character which can be used to password generation */
-#define PASSWORD_LENGTH_MIN     8           /**< Minimum password length to generate */
-#define PASSWORD_LENGTH_MAX     12          /**< Maximum password length to generate */
+
+#define PASSWORD_LENGTH_MIN     8           /**< Minimum password length */
+#define PASSWORD_LENGTH_MAX     16          /**< Maximum password length */
 
 #define MAIL_FROM   "kontakt@gamefreedom.pl"    /**< email addres for "from" clause */
 
