--- a/codeblocks/HGPlayersPanel.cbp
+++ b/codeblocks/HGPlayersPanel.cbp
@@ -92,6 +92,8 @@
 		<Unit filename="../src/pages/passRecovery.h" />
 		<Unit filename="../src/pages/register.cpp" />
 		<Unit filename="../src/pages/register.h" />
+		<Unit filename="../src/pages/serverStatus.cpp" />
+		<Unit filename="../src/pages/serverStatus.h" />
 		<Unit filename="../src/textItems.cpp" />
 		<Unit filename="../src/textItems.h" />
 		<Extensions>
